test/corpus/comments.txt
===================
Comments on objects
===================

# comment1
	# comment2
Base1: Object1# comment3

# comment4
Base2: Object2 # comment3
		# tabbed comment5
	# tabbed comment6

---

(source_file
	(comment)
	(comment)
	(object
		base: (identifier)
		name: (identifier)
		(comment)
		(comment)
	)
	(object
		base: (identifier)
		name: (identifier)
		(comment)
		(comment)
		(comment)
	)
)

====================
Comments on sections
====================

Base1: Object1
	# comment1
							# comment2
	section1#comment3
		# comment4
	# comment5
	section2 # comment6
	# comment7
		# comment8

---

(source_file
	(object
		base: (identifier)
		name: (identifier)
		(comment)
		(comment)
		body: (body
			(section
				name: (text
					(text_fragment)
				)
				(comment)
				(comment)
				(comment)
			)
			(section
				name: (text
					(text_fragment)
				)
				(comment)
				(comment)
				(comment)
			)
		)
	)
)

===================
Comments on structs
===================

Base1: Object1
	# comment1
							# comment2
	field1 = value1#comment3
		# comment4
	# comment5
	field2 = value2 # comment6
	# comment7
		# comment8

---

(source_file
	(object
		base: (identifier)
		name: (identifier)
		(comment)
		(comment)
		body: (body
			(struct_row
				key: (identifier)
				value: (text
					(text_fragment)
				)
				(comment)
				(comment)
				(comment)
			)
			(struct_row
				key: (identifier)
				value: (text
					(text_fragment)
				)
				(comment)
				(comment)
				(comment)
			)
		)
	)
)

==================
Comments on tables
==================

Base1: Object1
	# comment1
							# comment2
	| field1 |#comment3
		# comment4
	# comment5
	| field2 | field3 | # comment6
	# comment7
		# comment8

---

(source_file
	(object
		base: (identifier)
		name: (identifier)
		(comment)
		(comment)
		body: (body
			(table_row
				(text
					(text_fragment)
				)
				(comment)
				(comment)
				(comment)
			)
			(table_row
				(text
					(text_fragment)
				)
				(text
					(text_fragment)
				)
				(comment)
				(comment)
				(comment)
			)
		)
	)
)

=============================
Comments will cut off structs
=============================

Base1: Object1
	section1 # = comment3

---

(source_file
	(object
		base: (identifier)
		name: (identifier)
		body: (body
			(section
				name: (text
					(text_fragment)
				)
				(comment)
			)
		)
	)
)

============================
Comments will cut off tables
============================

Base1: Object1
	| field1 |# comment3 |
	| field1 | # comment3 |

---

(source_file
	(object
		base: (identifier)
		name: (identifier)
		body: (body
			(table_row
				(text
					(text_fragment)
				)
				(comment)
			)
			(table_row
				(text
					(text_fragment)
				)
				(comment)
			)
		)
	)
)
