test/corpus/models.txt
============
Simple model
============

Some Base Model: Some Model

---

(source_file
	(model
		base: (text)
		name: (text)
	)
)

=============================
Simple model with whitespaces
=============================




Some Base Model     :      Some Model



---

(source_file
	(model
		base: (text)
		name: (text)
	)
)

===============
Multiple models
===============

Base1: Model1
Base2: Model2
Base3: Model3

---

(source_file
	(model
		base: (text)
		name: (text)
	)
	(model
		base: (text)
		name: (text)
	)
	(model
		base: (text)
		name: (text)
	)
)

================================
Multiple models with whitespaces
================================

Base1  : Model1



Base2 :Model2




Base3:Model3





---

(source_file
	(model
		base: (text)
		name: (text)
	)
	(model
		base: (text)
		name: (text)
	)
	(model
		base: (text)
		name: (text)
	)
)

===================================
Models can't have multiple colons 1
:error
===================================

Base1:: Model1

---

===================================
Models can't have multiple colons 2
:error
===================================

Ba:se1: Model1

---

===================================
Models can't have multiple colons 3
:error
===================================

Base1: Mo:del1

---

===========================
Models can't have empty base
:error
===========================

: Model1

---

===========================
Models can't have empty name
:error
===========================

Base:

---

==========================
Models can't start from tab
:error
==========================

	Base1: Model1

---

=============================
Models can't start from spaces
:error
=============================

  Base1: Model1

---

============================================
Models can't have double indented sections 1
:error
============================================

Base1: Model1
		too much nested section

---

============================================
Models can't have double indented sections 2
:error
============================================

Base1: Model1
		too: many indents

---

============================================
Models can't have double indented sections 3
:error
============================================

Base1: Model1
		| too | many | indents |

---
